--- a/GRTPath/AndroidManifest.xml
+++ b/GRTPath/AndroidManifest.xml
@@ -71,7 +71,7 @@
     		android:value="@integer/google_play_services_version" />
         <meta-data
     		android:name="com.google.android.maps.v2.API_KEY"
-    		android:value="APIKEY"/>
+    		android:value="AIzaSyAncwfg9U24VgdMT7qDynjetL9UZiywz7c"/>
         
     </application>
 
