--- a/GRTPath/AndroidManifest.xml
+++ b/GRTPath/AndroidManifest.xml
@@ -62,7 +62,18 @@
         </activity>
         <activity
             android:name="com.grtpath.activity.MapActivity"
-            android:label="@string/title_activity_map" >
+            android:label="@string/title_activity_map" 
+       	    android:launchMode="singleTop"
+            android:parentActivityName="com.grtpath.activity.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.grtpath.activity.MainActivity" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
         
         <!-- Google Maps access -->
